@@ -1,3 +1,9 @@
+2007-11-21  Dan Williams  <dcbw@redhat.com>
+
+	* src/wireless-security/eap-method.c
+		- (default_filter): only allow files with .pem or .der extensions until
+			pkcs12 support is written
+
 2007-11-19  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
